<resources>
    <string name="app_name">Fixed Merchant</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="about_us">About Us</string>
    <string name="service_charge">Service Charge</string>
    <string name="terms">Terms</string>
    <string name="suggestions">Suggestions</string>
    <string name="more">…</string>
    <string name="top_title">আমাদের সেবাসমূহ</string>
    <string name="why_t">কেন ফিক্সড কুরিয়ার</string>
    <string name="blog_t">আমাদের ব্লগ</string>
    <string name="top_details">অনলাইন মার্চেন্টদের সুবিধা এবং স্বাচ্ছন্দ্য নিশ্চিন্ত করে ব্যবসাকে আরো সহজ, স্মার্ট এবং গ্রাহকদের উন্নততর
সেবা প্রদান করতে আমরা নিয়ে এসেছি দ্রুত, নির্ভরযোগ্য এবং নিরাপদ ডেলিভারি সুবিধা।</string>
    <string name="why_details">কফিক্সড কুরিয়ার আপনার ব্যবসার গুরুত্ব বোঝে প্রদান করে ব্যবসার জন্য সবচেয়ে সুবিধাজনক ডেলিভারি সার্ভিস</string>
    <string name="developed_by_skill_based_it">Developed by Skill Based IT</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number:</string>
    <string name="address">Email</string>
    <string name="submit">Submit</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="business_name">Business Name</string>
    <string name="full_address">Address:</string>
    <string name="division">Division</string>
    <string name="district">District</string>
    <string name="thana">Thana</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="title_activity_main_dashboard">Main_dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Profile Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Stats</string>
    <string name="menu_slideshow">Order Check/Track</string>
    <string name="delivered">Delivered</string>
    <string name="_0">0</string>
    <string name="cancel_t">Canceled</string>
    <string name="balance">Balance</string>
    <string name="t_pending">Total Pending</string>
    <string name="last">Last Day</string>
    <string name="pending_amount">Pending Amount</string>
    <string name="all_report">All Report</string>
    <string name="select">Select One</string>
    <string name="order_track">Order Track</string>
    <string name="parcel">Parcel</string>
    <string name="customer_name">Customer Name:</string>
    <string name="cod_amount">COD Amount</string>
    <string name="weight_kg_optional">Weight/KG(Optional)</string>
    <string name="package_optional">Package:(Optional)</string>
    <string name="note_optional">Note(Optional)</string>
    <string name="net_total">Net Total:</string>
    <string name="shipment_charge">Shipment Charge</string>
    <string name="cod_risk_charge">COD + Risk Charge</string>
    <string name="packaging_charge">Packaging Charge:</string>
    <string name="discount">Discount:</string>
    <string name="pickup">Pickup</string>
    <string name="latest_payment">Latest Payment</string>
    <string name="pending_consignments">Pending Consignments</string>
    <string name="coverage_area">Coverage Area</string>
    <string name="district_search">District Search</string>
    <string name="pricing">Pricing</string>
    <string name="service">Service</string>
    <string name="weight_kg">Weight(KG)</string>
    <string name="_0_00_tk">0.00 TK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="return_date">Return Date:</string>
    <string name="invoice_id">Invoice ID:</string>
    <string name="return_order">Return Order</string>
    <string name="title_activity_flash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_internet">No Internet</string>
    <string name="retry">Retry</string>
    <string name="log_out">Log Out</string>
    <string name="exit">Exit</string>
    <string name="all">All Consignments</string>
    <string name="view_payments">View Payments</string>
    <string name="settings">Settings</string>
    <string name="date">Date:</string>
    <string name="search_here">Search here…</string>
    <string name="id">ID: </string>
    <string name="total_amount">Total Amount:</string>
    <string name="business_information">Business Information</string>
    <string name="company_information">Company Name:</string>
    <string name="change">Change</string>
    <string name="owner_information">Owner Information</string>
    <string name="owner_name">Owner Name:</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="a_c_holder">A/C Holder</string>
    <string name="bank_a_c_no">Bank A/C NO</string>
    <string name="bank_information">Bank Information</string>
    <string name="other_account">Other Account</string>
    <string name="bkash_number">Bkash Number</string>
    <string name="rocket_number">Rocket Number</string>
    <string name="update">Update</string>
    <string name="support">Support</string>
    <string name="merchant_profile">Merchant Profile</string>
    <string name="img_upload">Image Upload</string>
    <string name="edit_more_txt">* If you want to edit more details, then you can go this location.</string>
    <string name="drawer_menu_settings"><![CDATA[Drawer Menu > Settings]]></string>
    <string name="details">Details</string>
    <string name="support_text">ফিক্সড কুরিয়ার ডেলিভারি সার্ভিস সম্পর্কিত যে কোনও সমস্যার সমাধানের জন্য আমাদের কল সেন্টারে কল করুন। আমরা গ্রাহকদের সর্বোত্তম সেবা প্রদানের লক্ষ্যে ২৪/৭ ঘন্টা সার্পোট দিয়ে থাকি। ফিক্সড কুরিয়ার সার্পোট টিম সর্বদা গ্রাহকের যে কোন সমস্য অল্প সময়ের মধ্যে সমাধান করে, গ্রাহককে নিশ্চিত করেন। ২৪/৭ হেল্প ডেস্ক-018XX XXX XXX service@fixedcourier.com.bd</string>
    <string name="show">Show</string>
    <string name="regular">Regular Day</string>
    <string name="customer_invoice">Customer Invoice</string>
    <string name="pickup_address">Pickup address:</string>
    <string name="estimated_parcel_optional">estimated Parcel(Optional)</string>
    <string name="order_request">Order Request</string>
    <string name="current_payment_method">Current Payment Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_request">Payment Request</string>
    <string name="cancel">Cancel</string>
    <string name="number">Number:</string>
    <string name="charge_cod">Charge(COD)</string>
    <string name="view">View All</string>
    <string name="not_found">Not Found</string>
    <string name="action">Action</string>
    <string name="reject">Reject</string>
    <string name="tracking_code">Tracking Code:</string>
    <string name="edit">Edit</string>
    <string name="assign_to">Assign To</string>
    <string name="note_to">Note To</string>
    <string name="parcel_tracking">Parcel Tracking</string>
    <string name="parcel_has_been_proccess">Parcel Has Been Proccess.</string>
    <string name="consignment_details_have_been_inserted_by_sender">Consignment details have been inserted by Sender.</string>
    <string name="this_parcel_processing_for_pickup">This Parcel processing For Pickup</string>
    <string name="zone">Zone:</string>
    <string name="send_office">This Parcel Send Office.</string>
    <string name="send_branch">This Parcel send to branch: </string>
    <string name="assign_to_rider">Assign TO Rider.</string>
    <string name="rider_way">Rider On the Way.</string>
    <string name="delivered_s">Your order is delivered</string>
    <string name="delivery_cost">Delivery cost:</string>
    <string name="order_status">ORDER STATUS</string>
    <string name="last_update">Last Update:</string>
    <string name="close">Close</string>
    <string name="no_pickup_request_today">No pickup request</string>
    <string name="invoice_update">Invoice Update</string>
    <string name="click">seller registration</string>
    <string name="latest_parcel">Latest Parcel</string>
    <string name="office_address">2nd floor jatrabari dhaka 1204</string>
    <string name="office_phone">01758956666</string>
    <string name="office_site">www.fixedcourier.com</string>
    <string name="ship_to">Ship To</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="total_ammount_delivered">Total Amount Delivered</string>
    <string name="total_shipment_charge">Total Shipment Charge</string>
    <string name="total_cod_charge">Total COD Charge</string>
    <string name="total_package_charge">Total Package Charge</string>
    <string name="sub_total_charge">Sub Total Charge</string>
    <string name="total_discount">Total Discount</string>
    <string name="grand_total">Grand Total</string>
    <string name="paid_bill">Paid Bill</string>
    <string name="due_bill">Due Bill</string>
    <string name="request_withdraw_method">Request Withdraw Method</string>
    <string name="account_holder">Account Holder</string>
    <string name="note">Note:</string>
    <string name="pickup_request">Pickup Request</string>
    <string name="home">Home</string>
    <string name="add_parcel">Add Parcel</string>
    <string name="info_img">Select your Information image (optional)</string>
    <string name="select_image">Select Image</string>
    <string name="add_image">Add Image</string>
    <string name="camera">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="address_optional">Address</string>
    <string name="customer_name_optional">Customer Name</string>
    <string name="image_optional">Invoice Upload(Optional)</string>
    <string name="support_team">Support Team</string>
    <string name="pending">Pending</string>
    <string name="letsTrack">Let\'s Track</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCYqlowQvpqAG2D1Sjb0QOH9cfrJICTifQ</string>
    <string name="my_loc">Current Location</string>
    <string name="map_loc">Map Location</string>
    <string name="track_not">Tracking Info not found.</string>
    <string name="track_order">Track Order</string>
    <string name="track">Track</string>
</resources>