<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".success_view.success">

    <ImageView
        android:id="@+id/top_img_login"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:src="@drawable/ic_done_rafiki"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/invoice_id"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_img_login" />

    <TextView
        android:id="@+id/invid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/top_img_login" />

    <View
        android:id="@+id/divider22"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invid" />

    <TextView
        android:id="@+id/cust_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider22" />

    <TextView
        android:id="@+id/cust_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cust_name" />

    <TextView
        android:id="@+id/cust_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cust_phone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_btn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/main_color"
        android:paddingVertical="11dp"
        android:text="@string/view"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cust_address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/second_color"
        android:paddingVertical="11dp"
        android:text="@string/home"
        android:textColor="@color/deep_main"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_btn"
        app:layout_constraintTop_toTopOf="@+id/view_btn"
        app:rippleColor="#0035AC" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/link_btn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkorange_opac"
        android:paddingVertical="11dp"
        android:text="@string/click"
        android:textStyle="bold"
        android:textColor="@color/darkorange"
        app:cornerRadius="30dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/close"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view_btn"
        app:layout_constraintTop_toBottomOf="@+id/parcel_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parcel_btn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:paddingVertical="11dp"
        android:text="@string/add_parcel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/close"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view_btn"
        app:layout_constraintTop_toBottomOf="@+id/view_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>